--- a/package.json
+++ b/package.json
@@ -3,133 +3,132 @@
   "license": "UNLICENSED",
   "type": "module",
   "dependencies": {
-    "@polymer/polymer": "3.5.1",
-    "@vaadin/bundles": "24.5.0-alpha11",
+    "@lit-labs/preact-signals": "^1.0.2",
+    "@polymer/polymer": "3.5.2",
+    "@vaadin/bundles": "24.6.1",
     "@vaadin/common-frontend": "0.0.19",
-    "@vaadin/hilla-file-router": "24.5.0-alpha13",
-    "@vaadin/hilla-frontend": "24.5.0-alpha13",
-    "@vaadin/hilla-lit-form": "24.5.0-alpha13",
-    "@vaadin/hilla-react-auth": "24.5.0-alpha13",
-    "@vaadin/hilla-react-crud": "24.5.0-alpha13",
-    "@vaadin/hilla-react-form": "24.5.0-alpha13",
-    "@vaadin/hilla-react-i18n": "24.5.0-alpha13",
-    "@vaadin/hilla-react-signals": "24.5.0-alpha13",
-    "@vaadin/polymer-legacy-adapter": "24.5.0-alpha11",
-    "@vaadin/react-components": "24.5.0-alpha11",
-    "@vaadin/react-components-pro": "24.5.0-alpha11",
-    "@vaadin/router": "1.7.5",
+    "@vaadin/hilla-file-router": "24.6.1",
+    "@vaadin/hilla-frontend": "24.6.1",
+    "@vaadin/hilla-lit-form": "24.6.1",
+    "@vaadin/hilla-react-auth": "24.6.1",
+    "@vaadin/hilla-react-crud": "24.6.1",
+    "@vaadin/hilla-react-form": "24.6.1",
+    "@vaadin/hilla-react-i18n": "24.6.1",
+    "@vaadin/hilla-react-signals": "24.6.1",
+    "@vaadin/polymer-legacy-adapter": "24.6.1",
+    "@vaadin/react-components": "24.6.1",
+    "@vaadin/react-components-pro": "24.6.1",
     "@vaadin/vaadin-development-mode-detector": "2.0.7",
-    "@vaadin/vaadin-lumo-styles": "24.5.0-alpha11",
-    "@vaadin/vaadin-material-styles": "24.5.0-alpha11",
-    "@vaadin/vaadin-themable-mixin": "24.5.0-alpha11",
+    "@vaadin/vaadin-lumo-styles": "24.6.1",
+    "@vaadin/vaadin-material-styles": "24.6.1",
+    "@vaadin/vaadin-themable-mixin": "24.6.1",
     "@vaadin/vaadin-usage-statistics": "2.1.3",
     "construct-style-sheets-polyfill": "3.1.0",
     "date-fns": "2.29.3",
-    "lit": "3.2.0",
-    "proj4": "2.11.0",
+    "lit": "3.2.1",
+    "proj4": "2.12.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-router-dom": "6.26.1"
+    "react-router-dom": "6.28.0"
   },
   "devDependencies": {
-    "@babel/preset-react": "7.24.7",
-    "@preact/signals-react-transform": "0.4.0",
-    "@rollup/plugin-replace": "5.0.7",
-    "@rollup/pluginutils": "5.1.0",
-    "@types/react": "18.3.5",
-    "@types/react-dom": "18.3.0",
-    "@vaadin/hilla-generator-cli": "24.5.0-alpha13",
-    "@vaadin/hilla-generator-core": "24.5.0-alpha13",
-    "@vaadin/hilla-generator-plugin-backbone": "24.5.0-alpha13",
-    "@vaadin/hilla-generator-plugin-barrel": "24.5.0-alpha13",
-    "@vaadin/hilla-generator-plugin-client": "24.5.0-alpha13",
-    "@vaadin/hilla-generator-plugin-model": "24.5.0-alpha13",
-    "@vaadin/hilla-generator-plugin-push": "24.5.0-alpha13",
-    "@vaadin/hilla-generator-plugin-signals": "24.5.0-alpha13",
-    "@vaadin/hilla-generator-plugin-subtypes": "24.5.0-alpha13",
-    "@vaadin/hilla-generator-utils": "24.5.0-alpha13",
-    "@vitejs/plugin-react": "4.3.1",
+    "@babel/preset-react": "7.26.3",
+    "@preact/signals-react-transform": "0.5.0",
+    "@rollup/plugin-replace": "6.0.2",
+    "@rollup/pluginutils": "5.1.4",
+    "@types/react": "18.3.18",
+    "@types/react-dom": "18.3.5",
+    "@vaadin/hilla-generator-cli": "24.6.1",
+    "@vaadin/hilla-generator-core": "24.6.1",
+    "@vaadin/hilla-generator-plugin-backbone": "24.6.1",
+    "@vaadin/hilla-generator-plugin-barrel": "24.6.1",
+    "@vaadin/hilla-generator-plugin-client": "24.6.1",
+    "@vaadin/hilla-generator-plugin-model": "24.6.1",
+    "@vaadin/hilla-generator-plugin-push": "24.6.1",
+    "@vaadin/hilla-generator-plugin-signals": "24.6.1",
+    "@vaadin/hilla-generator-plugin-subtypes": "24.6.1",
+    "@vaadin/hilla-generator-utils": "24.6.1",
+    "@vitejs/plugin-react": "4.3.4",
     "async": "3.2.6",
     "glob": "10.4.5",
     "rollup-plugin-brotli": "3.1.0",
-    "rollup-plugin-visualizer": "5.12.0",
+    "rollup-plugin-visualizer": "5.13.1",
     "strip-css-comments": "5.0.0",
     "transform-ast": "2.4.4",
-    "typescript": "5.5.4",
-    "vite": "5.4.3",
-    "vite-plugin-checker": "0.7.2",
-    "workbox-build": "7.1.1",
-    "workbox-core": "7.1.0",
-    "workbox-precaching": "7.1.0"
+    "typescript": "5.7.2",
+    "vite": "6.0.6",
+    "vite-plugin-checker": "0.8.0",
+    "workbox-build": "7.3.0",
+    "workbox-core": "7.3.0",
+    "workbox-precaching": "7.3.0"
   },
   "vaadin": {
     "dependencies": {
-      "@polymer/polymer": "3.5.1",
-      "@vaadin/bundles": "24.5.0-alpha11",
+      "@lit-labs/preact-signals": "^1.0.2",
+      "@polymer/polymer": "3.5.2",
+      "@vaadin/bundles": "24.6.1",
       "@vaadin/common-frontend": "0.0.19",
-      "@vaadin/hilla-file-router": "24.5.0-alpha13",
-      "@vaadin/hilla-frontend": "24.5.0-alpha13",
-      "@vaadin/hilla-lit-form": "24.5.0-alpha13",
-      "@vaadin/hilla-react-auth": "24.5.0-alpha13",
-      "@vaadin/hilla-react-crud": "24.5.0-alpha13",
-      "@vaadin/hilla-react-form": "24.5.0-alpha13",
-      "@vaadin/hilla-react-i18n": "24.5.0-alpha13",
-      "@vaadin/hilla-react-signals": "24.5.0-alpha13",
-      "@vaadin/polymer-legacy-adapter": "24.5.0-alpha11",
-      "@vaadin/react-components": "24.5.0-alpha11",
-      "@vaadin/react-components-pro": "24.5.0-alpha11",
-      "@vaadin/router": "1.7.5",
+      "@vaadin/hilla-file-router": "24.6.1",
+      "@vaadin/hilla-frontend": "24.6.1",
+      "@vaadin/hilla-lit-form": "24.6.1",
+      "@vaadin/hilla-react-auth": "24.6.1",
+      "@vaadin/hilla-react-crud": "24.6.1",
+      "@vaadin/hilla-react-form": "24.6.1",
+      "@vaadin/hilla-react-i18n": "24.6.1",
+      "@vaadin/hilla-react-signals": "24.6.1",
+      "@vaadin/polymer-legacy-adapter": "24.6.1",
+      "@vaadin/react-components": "24.6.1",
+      "@vaadin/react-components-pro": "24.6.1",
       "@vaadin/vaadin-development-mode-detector": "2.0.7",
-      "@vaadin/vaadin-lumo-styles": "24.5.0-alpha11",
-      "@vaadin/vaadin-material-styles": "24.5.0-alpha11",
-      "@vaadin/vaadin-themable-mixin": "24.5.0-alpha11",
+      "@vaadin/vaadin-lumo-styles": "24.6.1",
+      "@vaadin/vaadin-material-styles": "24.6.1",
+      "@vaadin/vaadin-themable-mixin": "24.6.1",
       "@vaadin/vaadin-usage-statistics": "2.1.3",
       "construct-style-sheets-polyfill": "3.1.0",
       "date-fns": "2.29.3",
-      "lit": "3.2.0",
-      "proj4": "2.11.0",
+      "lit": "3.2.1",
+      "proj4": "2.12.1",
       "react": "18.3.1",
       "react-dom": "18.3.1",
-      "react-router-dom": "6.26.1"
+      "react-router-dom": "6.28.0"
     },
     "devDependencies": {
-      "@babel/preset-react": "7.24.7",
-      "@preact/signals-react-transform": "0.4.0",
-      "@rollup/plugin-replace": "5.0.7",
-      "@rollup/pluginutils": "5.1.0",
-      "@types/react": "18.3.5",
-      "@types/react-dom": "18.3.0",
-      "@vaadin/hilla-generator-cli": "24.5.0-alpha13",
-      "@vaadin/hilla-generator-core": "24.5.0-alpha13",
-      "@vaadin/hilla-generator-plugin-backbone": "24.5.0-alpha13",
-      "@vaadin/hilla-generator-plugin-barrel": "24.5.0-alpha13",
-      "@vaadin/hilla-generator-plugin-client": "24.5.0-alpha13",
-      "@vaadin/hilla-generator-plugin-model": "24.5.0-alpha13",
-      "@vaadin/hilla-generator-plugin-push": "24.5.0-alpha13",
-      "@vaadin/hilla-generator-plugin-signals": "24.5.0-alpha13",
-      "@vaadin/hilla-generator-plugin-subtypes": "24.5.0-alpha13",
-      "@vaadin/hilla-generator-utils": "24.5.0-alpha13",
-      "@vitejs/plugin-react": "4.3.1",
+      "@babel/preset-react": "7.26.3",
+      "@preact/signals-react-transform": "0.5.0",
+      "@rollup/plugin-replace": "6.0.2",
+      "@rollup/pluginutils": "5.1.4",
+      "@types/react": "18.3.18",
+      "@types/react-dom": "18.3.5",
+      "@vaadin/hilla-generator-cli": "24.6.1",
+      "@vaadin/hilla-generator-core": "24.6.1",
+      "@vaadin/hilla-generator-plugin-backbone": "24.6.1",
+      "@vaadin/hilla-generator-plugin-barrel": "24.6.1",
+      "@vaadin/hilla-generator-plugin-client": "24.6.1",
+      "@vaadin/hilla-generator-plugin-model": "24.6.1",
+      "@vaadin/hilla-generator-plugin-push": "24.6.1",
+      "@vaadin/hilla-generator-plugin-signals": "24.6.1",
+      "@vaadin/hilla-generator-plugin-subtypes": "24.6.1",
+      "@vaadin/hilla-generator-utils": "24.6.1",
+      "@vitejs/plugin-react": "4.3.4",
       "async": "3.2.6",
       "glob": "10.4.5",
       "rollup-plugin-brotli": "3.1.0",
-      "rollup-plugin-visualizer": "5.12.0",
+      "rollup-plugin-visualizer": "5.13.1",
       "strip-css-comments": "5.0.0",
       "transform-ast": "2.4.4",
-      "typescript": "5.5.4",
-      "vite": "5.4.3",
-      "vite-plugin-checker": "0.7.2",
-      "workbox-build": "7.1.1",
-      "workbox-core": "7.1.0",
-      "workbox-precaching": "7.1.0"
+      "typescript": "5.7.2",
+      "vite": "6.0.6",
+      "vite-plugin-checker": "0.8.0",
+      "workbox-build": "7.3.0",
+      "workbox-core": "7.3.0",
+      "workbox-precaching": "7.3.0"
     },
-    "hash": "24b5bab6fee5bf8eafc1b69154f5bc660a47afc3921c3245b04db9ab54427740"
+    "hash": "9af0526200676b9c1667bd2417de25b0091866287eb46c5e26d005448ca3c915"
   },
   "overrides": {
     "@vaadin/bundles": "$@vaadin/bundles",
     "@vaadin/polymer-legacy-adapter": "$@vaadin/polymer-legacy-adapter",
     "@vaadin/vaadin-development-mode-detector": "$@vaadin/vaadin-development-mode-detector",
-    "@vaadin/router": "$@vaadin/router",
     "@vaadin/vaadin-usage-statistics": "$@vaadin/vaadin-usage-statistics",
     "@vaadin/react-components": "$@vaadin/react-components",
     "@vaadin/common-frontend": "$@vaadin/common-frontend",
@@ -163,6 +162,7 @@
     "@vaadin/react-components-pro": "$@vaadin/react-components-pro",
     "@vaadin/vaadin-themable-mixin": "$@vaadin/vaadin-themable-mixin",
     "@vaadin/vaadin-lumo-styles": "$@vaadin/vaadin-lumo-styles",
-    "@vaadin/vaadin-material-styles": "$@vaadin/vaadin-material-styles"
+    "@vaadin/vaadin-material-styles": "$@vaadin/vaadin-material-styles",
+    "@lit-labs/preact-signals": "$@lit-labs/preact-signals"
   }
 }
