--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
     <properties>
         <java.version>21</java.version>
-        <vaadin.version>24.5.0.alpha15</vaadin.version>
+        <vaadin.version>24.6.1</vaadin.version>
     </properties>
 
     <parent>
@@ -27,6 +27,11 @@
             <snapshots>
                 <enabled>true</enabled>
             </snapshots>
+        </repository>
+
+        <repository>
+            <id>Vaadin Directory</id>
+            <url>https://maven.vaadin.com/vaadin-addons</url>
         </repository>
     </repositories>
 
@@ -92,6 +97,12 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.vaadin.addons.themeselect</groupId>
+            <artifactId>themeselect</artifactId>
+            <version>1.0.1</version>
         </dependency>
     </dependencies>
 
